--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "d3": "^7.9.0",
+    "leaflet": "^1.9.4",
     "nativewind": "^4.1.20",
     "next": "14.2.15",
+    "papaparse": "^5.4.1",
     "plotly.js": "^2.35.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
