--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.27",
+    "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@types/plotly.js": "^2.33.4",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "d3": "^7.9.0",
+    "framer-motion": "^11.11.11",
+    "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
+    "lenis": "^1.1.15",
     "nativewind": "^4.1.20",
     "next": "14.2.15",
     "papaparse": "^5.4.1",
@@ -22,13 +27,19 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-email": "^3.0.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-leaflet": "^4.2.1",
-    "react-plotly.js": "^2.6.0"
+    "react-plotly.js": "^2.6.0",
+    "resend": "^4.0.1-alpha.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
